speed: Fix some bytes-per-frame vs. bytes-per-sample mixups

Otherwise we will crash when handling multiple channels and
miscalculate timestamps.

https://bugzilla.gnome.org/show_bug.cgi?id=709734